--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "Andres Lemus",
   "license": "ISC",
   "dependencies": {
+    "plotly.js": "^1.52.3",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-plotly.js": "^2.4.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
